// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`My component renders the UI as expect with 0 unread 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`My component renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`renders the UI as expect with 0 unread 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;
